--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Zalando Privé Monitor</title>
+  <title>Privé by Zalando - Stock Monitor</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -16,9 +16,9 @@
 
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #ffffff;
+      background: #4318ff;
       min-height: 100vh;
-      color: #1a1a1a;
+      color: #ffffff;
       padding: 20px;
       padding-bottom: 120px;
     }
@@ -27,29 +27,63 @@
       text-align: center;
       padding: 32px 0;
       margin-bottom: 24px;
-      border-bottom: 1px solid #f0f0f0;
     }
 
     .logo {
-      font-size: 20px;
-      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+      margin-bottom: 8px;
+    }
+
+    .logo-icon {
+      width: 40px;
+      height: 40px;
+      background: #ff6900;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo-icon svg {
+      width: 24px;
+      height: 24px;
+      fill: #4318ff;
+    }
+
+    .logo-text {
+      font-size: 24px;
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+
+    .logo-text .prive {
+      color: #ffffff;
+    }
+
+    .logo-text .by-zalando {
+      font-size: 12px;
+      font-weight: 400;
+      color: rgba(255,255,255,0.7);
+      display: block;
       letter-spacing: 2px;
-      color: #ff6900;
     }
 
     .header .subtitle {
       font-size: 11px;
       letter-spacing: 3px;
-      color: #888;
+      color: rgba(255,255,255,0.6);
       text-transform: uppercase;
-      margin-top: 8px;
+      margin-top: 16px;
     }
 
     .header .status {
       margin-top: 16px;
       font-size: 11px;
       letter-spacing: 1px;
-      color: #888;
+      color: rgba(255,255,255,0.6);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -57,15 +91,15 @@
     }
 
     .status-dot {
-      width: 6px;
-      height: 6px;
+      width: 8px;
+      height: 8px;
       border-radius: 50%;
-      background: #ccc;
+      background: rgba(255,255,255,0.3);
     }
 
     .status.active .status-dot {
-      background: #22c55e;
-      box-shadow: 0 0 8px rgba(34, 197, 94, 0.5);
+      background: #ff6900;
+      box-shadow: 0 0 12px rgba(255, 105, 0, 0.6);
       animation: pulse 2s infinite;
     }
 
@@ -75,15 +109,16 @@
     }
 
     .status.active {
-      color: #22c55e;
+      color: #ff6900;
     }
 
     .card {
-      background: #fafafa;
-      border-radius: 16px;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
       padding: 24px;
       margin-bottom: 16px;
-      border: 1px solid #f0f0f0;
+      border: 1px solid rgba(255,255,255,0.15);
     }
 
     .card h2 {
@@ -92,7 +127,7 @@
       letter-spacing: 2px;
       text-transform: uppercase;
       margin-bottom: 20px;
-      color: #888;
+      color: rgba(255,255,255,0.7);
     }
 
     .form-group {
@@ -104,17 +139,17 @@
       font-size: 11px;
       letter-spacing: 1px;
       text-transform: uppercase;
-      color: #888;
+      color: rgba(255,255,255,0.6);
       margin-bottom: 8px;
     }
 
     .form-group input {
       width: 100%;
       padding: 16px;
-      border-radius: 10px;
-      border: 1px solid #e0e0e0;
-      background: #fff;
-      color: #1a1a1a;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.1);
+      color: #ffffff;
       font-size: 15px;
       font-family: 'Inter', sans-serif;
       outline: none;
@@ -123,16 +158,17 @@
 
     .form-group input:focus {
       border-color: #ff6900;
+      background: rgba(255,255,255,0.15);
     }
 
     .form-group input::placeholder {
-      color: #bbb;
+      color: rgba(255,255,255,0.4);
     }
 
     .btn {
       width: 100%;
       padding: 16px;
-      border-radius: 10px;
+      border-radius: 12px;
       border: none;
       font-size: 12px;
       font-weight: 600;
@@ -154,11 +190,12 @@
 
     .btn-primary {
       background: #ff6900;
-      color: #fff;
+      color: #ffffff;
     }
 
     .btn-primary:hover {
-      background: #e55f00;
+      background: #ff7a1a;
+      box-shadow: 0 4px 20px rgba(255, 105, 0, 0.4);
     }
 
     .btn-success {
@@ -168,29 +205,29 @@
 
     .btn-danger {
       background: transparent;
-      color: #ef4444;
-      border: 1px solid #fecaca;
+      color: #ff6b6b;
+      border: 1px solid rgba(255, 107, 107, 0.4);
     }
 
     .btn-danger:hover {
-      background: #fef2f2;
+      background: rgba(255, 107, 107, 0.1);
     }
 
     .btn-secondary {
       background: transparent;
-      color: #666;
-      border: 1px solid #e0e0e0;
+      color: rgba(255,255,255,0.8);
+      border: 1px solid rgba(255,255,255,0.3);
     }
 
     .btn-secondary:hover {
-      background: #f5f5f5;
+      background: rgba(255,255,255,0.1);
     }
 
     .product-preview {
       display: none;
       margin-top: 24px;
       padding-top: 24px;
-      border-top: 1px solid #f0f0f0;
+      border-top: 1px solid rgba(255,255,255,0.1);
     }
 
     .product-preview.visible {
@@ -198,11 +235,11 @@
     }
 
     .product-info {
-      background: #fff;
-      border-radius: 12px;
+      background: rgba(0,0,0,0.2);
+      border-radius: 16px;
       padding: 20px;
       margin-bottom: 20px;
-      border: 1px solid #f0f0f0;
+      border: 1px solid rgba(255,255,255,0.1);
     }
 
     .product-info .brand {
@@ -214,47 +251,50 @@
     }
 
     .product-info h3 {
-      font-size: 16px;
-      font-weight: 500;
+      font-size: 18px;
+      font-weight: 600;
       margin-bottom: 8px;
-      color: #1a1a1a;
+      color: #ffffff;
     }
 
     .product-info .meta {
       font-size: 13px;
-      color: #888;
+      color: rgba(255,255,255,0.6);
     }
 
     .product-info .price-row {
-      margin-top: 12px;
+      margin-top: 16px;
       display: flex;
       align-items: baseline;
-      gap: 10px;
+      gap: 12px;
     }
 
     .product-info .price {
-      font-size: 20px;
-      font-weight: 600;
+      font-size: 24px;
+      font-weight: 700;
       color: #ff6900;
     }
 
     .product-info .original-price {
       font-size: 14px;
-      color: #bbb;
+      color: rgba(255,255,255,0.4);
       text-decoration: line-through;
     }
 
     .product-info .discount {
       font-size: 12px;
       color: #22c55e;
-      font-weight: 500;
+      font-weight: 600;
+      background: rgba(34, 197, 94, 0.15);
+      padding: 4px 8px;
+      border-radius: 6px;
     }
 
     .section-label {
       font-size: 11px;
       letter-spacing: 2px;
       text-transform: uppercase;
-      color: #888;
+      color: rgba(255,255,255,0.6);
       margin-bottom: 12px;
     }
 
@@ -267,49 +307,49 @@
 
     .size-item {
       padding: 14px 10px;
-      border-radius: 10px;
-      background: #fff;
-      border: 1px solid #e0e0e0;
+      border-radius: 12px;
+      background: rgba(255,255,255,0.1);
+      border: 1px solid rgba(255,255,255,0.15);
       cursor: pointer;
       transition: all 0.2s ease;
       text-align: center;
     }
 
     .size-item:hover {
-      border-color: #ccc;
+      border-color: rgba(255,255,255,0.3);
     }
 
     .size-item.selected {
       border-color: #ff6900;
-      background: #fff7ed;
+      background: rgba(255, 105, 0, 0.2);
     }
 
     .size-item.out-of-stock {
-      border-color: #fecaca;
-      background: #fef2f2;
+      border-color: rgba(255, 107, 107, 0.3);
+      background: rgba(255, 107, 107, 0.1);
     }
 
     .size-item.in-stock {
-      border-color: #bbf7d0;
-      background: #f0fdf4;
+      border-color: rgba(34, 197, 94, 0.4);
+      background: rgba(34, 197, 94, 0.15);
     }
 
     .size-item .size-name {
-      font-size: 15px;
+      font-size: 16px;
       font-weight: 600;
-      color: #1a1a1a;
+      color: #ffffff;
     }
 
     .size-item .stock-info {
       font-size: 10px;
       letter-spacing: 1px;
       text-transform: uppercase;
-      color: #888;
+      color: rgba(255,255,255,0.5);
       margin-top: 4px;
     }
 
     .size-item.out-of-stock .stock-info {
-      color: #ef4444;
+      color: #ff6b6b;
     }
 
     .size-item.in-stock .stock-info {
@@ -321,11 +361,11 @@
     }
 
     .monitored-product {
-      background: #fff;
-      border-radius: 12px;
+      background: rgba(0,0,0,0.2);
+      border-radius: 16px;
       padding: 20px;
       margin-bottom: 12px;
-      border: 1px solid #f0f0f0;
+      border: 1px solid rgba(255,255,255,0.1);
       position: relative;
       border-left: 4px solid #ff6900;
     }
@@ -339,16 +379,17 @@
     }
 
     .monitored-product h4 {
-      font-size: 14px;
-      font-weight: 500;
+      font-size: 15px;
+      font-weight: 600;
       margin-bottom: 12px;
-      color: #1a1a1a;
+      color: #ffffff;
     }
 
     .monitored-product .info-row {
       display: flex;
       gap: 16px;
       margin-bottom: 6px;
+      flex-wrap: wrap;
     }
 
     .monitored-product .info-item {
@@ -356,17 +397,17 @@
     }
 
     .monitored-product .info-label {
-      color: #888;
+      color: rgba(255,255,255,0.5);
       margin-right: 4px;
     }
 
     .monitored-product .watching {
-      color: #22c55e;
+      color: #ff6900;
       font-weight: 500;
     }
 
-    .monitored-product .added {
-      color: #ff6900;
+    .monitored-product .notified-badge {
+      color: #22c55e;
       font-weight: 500;
     }
 
@@ -395,7 +436,7 @@
     .spinner {
       width: 32px;
       height: 32px;
-      border: 2px solid #f0f0f0;
+      border: 2px solid rgba(255,255,255,0.2);
       border-top-color: #ff6900;
       border-radius: 50%;
       animation: spin 0.8s linear infinite;
@@ -405,7 +446,7 @@
     .loading-text {
       font-size: 12px;
       letter-spacing: 1px;
-      color: #888;
+      color: rgba(255,255,255,0.6);
     }
 
     @keyframes spin {
@@ -417,19 +458,20 @@
       bottom: 24px;
       left: 50%;
       transform: translateX(-50%) translateY(100px);
-      background: #1a1a1a;
-      color: #fff;
+      background: #ffffff;
+      color: #4318ff;
       padding: 16px 28px;
-      border-radius: 10px;
+      border-radius: 12px;
       font-size: 13px;
-      font-weight: 500;
+      font-weight: 600;
       opacity: 0;
       transition: all 0.3s ease;
       z-index: 1000;
     }
 
     .toast.error {
-      background: #ef4444;
+      background: #ff6b6b;
+      color: #ffffff;
     }
 
     .toast.visible {
@@ -440,16 +482,16 @@
     .empty-state {
       text-align: center;
       padding: 48px 20px;
-      color: #bbb;
+      color: rgba(255,255,255,0.4);
     }
 
     .empty-state .icon {
-      font-size: 40px;
+      font-size: 48px;
       margin-bottom: 16px;
     }
 
     .empty-state p {
-      font-size: 13px;
+      font-size: 14px;
     }
 
     .section-title {
@@ -457,7 +499,7 @@
       font-weight: 600;
       letter-spacing: 2px;
       text-transform: uppercase;
-      color: #888;
+      color: rgba(255,255,255,0.6);
       margin: 28px 0 12px;
     }
 
@@ -469,7 +511,7 @@
       cursor: pointer;
       font-size: 12px;
       letter-spacing: 1px;
-      color: #888;
+      color: rgba(255,255,255,0.6);
       padding: 8px 0;
       outline: none;
       list-style: none;
@@ -481,6 +523,7 @@
 
     .token-section summary::before {
       content: '+ ';
+      color: #ff6900;
     }
 
     .token-section[open] summary::before {
@@ -492,10 +535,10 @@
       height: 100px;
       margin-top: 12px;
       padding: 14px;
-      border-radius: 10px;
-      border: 1px solid #e0e0e0;
-      background: #fff;
-      color: #1a1a1a;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.1);
+      color: #ffffff;
       font-size: 11px;
       font-family: 'SF Mono', 'Monaco', monospace;
       resize: none;
@@ -506,9 +549,13 @@
       border-color: #ff6900;
     }
 
+    .token-section textarea::placeholder {
+      color: rgba(255,255,255,0.4);
+    }
+
     .divider {
       height: 1px;
-      background: #f0f0f0;
+      background: rgba(255,255,255,0.1);
       margin: 16px 0;
     }
 
@@ -525,15 +572,15 @@
       right: 0;
       top: 50%;
       height: 1px;
-      background: #e0e0e0;
+      background: rgba(255,255,255,0.15);
     }
 
     .or-divider span {
-      background: #fafafa;
+      background: rgba(67, 24, 255, 1);
       padding: 0 12px;
       position: relative;
       font-size: 11px;
-      color: #888;
+      color: rgba(255,255,255,0.5);
       text-transform: uppercase;
       letter-spacing: 1px;
     }
@@ -541,7 +588,17 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo">ZALANDO PRIVÉ</div>
+    <div class="logo">
+      <div class="logo-icon">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M8 5v14l11-7L8 5z"/>
+        </svg>
+      </div>
+      <div class="logo-text">
+        <span class="prive">PRIVÉ</span>
+        <span class="by-zalando">by zalando</span>
+      </div>
+    </div>
     <div class="subtitle">Stock Monitor</div>
     <div class="status" id="monitorStatus">
       <span class="status-dot"></span>
@@ -604,7 +661,7 @@
       <textarea id="tokenInput" placeholder="Collez votre token ici (avec ou sans Bearer)..."></textarea>
       <div class="divider"></div>
       <button class="btn btn-secondary" onclick="updateToken()">
-        Mettre à jour
+        Mettre à jour le token
       </button>
     </details>
   </div>
@@ -779,7 +836,7 @@
             return mapping ? mapping.size : sku;
           }).join(', ');
 
-          const addedSizeNames = product.addedToCart.map(sku => {
+          const notifiedSizeNames = product.notified.map(sku => {
             const mapping = product.sizeMapping[sku];
             return mapping ? mapping.size : sku;
           }).join(', ');
@@ -804,11 +861,11 @@
                   <span class="watching">${watchedSizeNames}</span>
                 </div>
               </div>
-              ${addedSizeNames ? `
+              ${notifiedSizeNames ? `
               <div class="info-row">
                 <div class="info-item">
-                  <span class="info-label">Ajouté au panier</span>
-                  <span class="added">${addedSizeNames}</span>
+                  <span class="info-label">Notifié</span>
+                  <span class="notified-badge">✓ ${notifiedSizeNames}</span>
                 </div>
               </div>
               ` : ''}
@@ -840,7 +897,7 @@
     async function resetProduct(key) {
       try {
         await fetch(`/api/products/${encodeURIComponent(key)}/reset`, { method: 'POST' });
-        showToast('Tracking réinitialisé');
+        showToast('Notifications réinitialisées');
         loadMonitoredProducts();
       } catch (error) {
         showToast('Erreur lors du reset', true);
